--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "moment": "^2.11.1",
+    "mongoose": "^4.3.5",
     "restify": "^4.0.3",
     "winston": "^2.1.1"
   },
@@ -30,6 +31,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-eslint": "^17.3.1",
+    "grunt-execute": "^0.2.2",
     "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.3.4",
     "should": "^8.1.1",
