try to get it running on heroku - lodash dependency missing in heroku

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/vkowalke/challenge/issues"
   },
   "dependencies": {
+    "lodash": "^4.0.0",
     "moment": "^2.11.1",
     "mongoose": "^4.3.5",
     "restify": "^4.0.3",
